Adding core to docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,24 +14,25 @@ version: "2.1"
 
 services:
 
+
   redis:
     image: redis:5.0.3
     mem_limit: 64m
     tty: true
 
-  #  core:
-  ##    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-core:develop
-  #    build: ../ip-core
-  #    mem_limit: 256m
-  #    tty: true
-  #    depends_on:
-  #      alfresco:
-  #        condition: service_healthy
-  #      flowable-rest:
-  #        condition: service_healthy
-  #    ports:
-  #      - 8080:8080
-  #
+
+  core:
+    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-core:develop
+    mem_limit: 256m
+    tty: true
+    depends_on:
+      alfresco:
+        condition: service_healthy
+      flowable-rest:
+        condition: service_healthy
+    ports:
+      - 8080:8080
+
 
   crypto:
     image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-crypto:develop
@@ -120,6 +121,8 @@ services:
       - PROXY_ADDRESS_FORWARDING=true
     volumes:
       - ./resources/keycloak/keycloak.json:/tmp/keycloak.json
+    ports:
+      - 9090:8080
 
 
   matomo:
