--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-crypto:develop
     mem_limit: 256m
     tty: true
+    ports:
+      - 8087:8087
 
 
   alfresco:
@@ -66,6 +68,8 @@ services:
                 "
     volumes:
       - ./data/alfresco:/usr/local/tomcat/alf_data
+    ports:
+      - 9000:8080
 
 
   postgres:
@@ -104,6 +108,8 @@ services:
       - SPRING_DATASOURCE_DRIVER-CLASS-NAME=org.postgresql.Driver
       - FLOWABLE_REST_APP_ADMIN_USER-ID=kermit
       - FLOWABLE_REST_APP_ADMIN_PASSWORD=kermit
+    ports:
+      - 9999:8080
 
 
   keycloak:
