--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@
 # Get the latest docker-compose.yml file with a 30-day trial license by accessing the Alfresco Content Services trial download page at:
 # https://www.alfresco.com/platform/content-services-ecm/trial/download
 
-# Using version 2 as 3 does not support resource constraint options (cpu_*, mem_* limits) for non swarm mode in Compose
 version: '3.7'
 
 services:
@@ -22,8 +21,8 @@ services:
 
 
   core:
-    # image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-core:develop
-    build: ../ip-core
+    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-core:develop
+    # build: ../ip-core
     tty: true
     depends_on:
       - alfresco
