--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,21 @@ version: '3.7'
 
 services:
 
+  nginx:
+    image: nginx:1.17.1
+    tty: true
+    volumes:
+      - ./resources/nginx/:/etc/nginx/conf.d/
+    environment:
+      - APPLICATION_URL=iparapheur.dom.local
+    depends_on:
+      - core
+      - keycloak
+    ports:
+      - 80:80
+      - 443:443
+
+
   redis:
     image: redis:5.0.3
     tty: true
@@ -59,19 +74,18 @@ services:
       - 9000:8080
 
 
-    #  postgres:
-    #    build: resources/postgres
-    #    mem_limit: 1500m
-    #    tty: true
-    #    environment:
-    #      - POSTGRES_PASSWORD=libriciel2k18
-    #      - POSTGRES_USER=root
-    #      - DB_TO_CREATE=alfresco,flowable,keycloak,ipcore
-    #    command: postgres -c max_connections=500 -c log_min_messages=LOG
-    #    volumes:
-    #      - ./data/postgres:/var/lib/postgresql/data
-    #    ports:
-    #      - 5432:5432
+  postgres:
+    build: resources/postgres
+    tty: true
+    environment:
+      - POSTGRES_PASSWORD=libriciel2k18
+      - POSTGRES_USER=root
+      - DB_TO_CREATE=alfresco,flowable,keycloak,ipcore
+    command: postgres -c max_connections=500 -c log_min_messages=LOG
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
 
   flowable-rest:
