--- a/resources/nginx/iparapheur.conf
+++ b/resources/nginx/iparapheur.conf
@@ -13,19 +13,19 @@ server {
    proxy_http_version 1.1;
 
    location /auth {
-       proxy_pass http://keycloak:8080;
+       proxy_pass http://keycloak:8080/auth;
    }
 
    location /poc5 {
-       proxy_pass http://core:8080;
+       proxy_pass http://core:8080/;
    }
 
    location ^~ / {
-       proxy_pass http://host.docker.internal:4200;
+       proxy_pass http://host.docker.internal:4200/;
    }
 
    location ^~ /sockjs-node/ {
-       proxy_pass http://host.docker.internal:4200;
+       proxy_pass http://host.docker.internal:4200/;
    }
 
 }
