--- a/resources/nginx/iparapheur.conf
+++ b/resources/nginx/iparapheur.conf
@@ -2,7 +2,7 @@
 server {
 
    listen 80;
-   server_name localhost;
+   server_name iparapheur.dom.local;
 
    client_max_body_size 2000M;
 
@@ -17,15 +17,15 @@ server {
    }
 
    location /poc5 {
-       proxy_pass http://core:8080/;
+       proxy_pass http://core:8080/poc5;
    }
 
    location ^~ / {
-       proxy_pass http://host.docker.internal:4200/;
+       proxy_pass http://web:80/;
    }
 
    location ^~ /sockjs-node/ {
-       proxy_pass http://host.docker.internal:4200/;
+       proxy_pass http://web:80/;
    }
 
 }
