--- a/resources/core/application.yml
+++ b/resources/core/application.yml
@@ -66,7 +66,7 @@ spring:
   main.allow-bean-definition-overriding: true
 
 keycloak:
-  auth-server-url: http://keycloak:8080/auth
+  auth-server-url: http://iparapheur.dom.local/auth
   realm: pocv5
   resource: ipcore-api
   bearer-only: true
