--- a/resources/nginx/iparapheur.conf
+++ b/resources/nginx/iparapheur.conf
@@ -4,6 +4,10 @@ server {
    listen 80;
    server_name iparapheur.dom.local;
 
+   # ssl on;
+   # ssl_certificate /etc/nginx/ssl/iparapheur.dom.local.crt;
+   # ssl_certificate_key /etc/nginx/ssl/iparapheur.dom.local.key;
+
    client_max_body_size 2000M;
 
    proxy_set_header Host $host;
