--- a/resources/nginx/iparapheur.conf
+++ b/resources/nginx/iparapheur.conf
@@ -25,11 +25,13 @@ server {
    }
 
    location ^~ / {
-       proxy_pass http://web:80/;
+       # proxy_pass http://web:80/;
+       proxy_pass http://host.docker.internal:4200/;
    }
 
-   location ^~ /sockjs-node/ {
-       proxy_pass http://web:80/;
+   location ^~ /sockjs-node {
+       # proxy_pass http://web:80/sockjs-node;
+       proxy_pass http://host.docker.internal:4200/sockjs-node;
    }
 
 }
