--- a/resources/nginx/iparapheur.conf
+++ b/resources/nginx/iparapheur.conf
@@ -24,6 +24,10 @@ server {
        proxy_pass http://core:8080/poc5;
    }
 
+   location /crypto {
+       proxy_pass http://crypto:8080/crypto;
+   }
+
    location ^~ / {
        # proxy_pass http://web:80/;
        proxy_pass http://host.docker.internal:4200/;
