--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - flowable-rest
     volumes:
       - ./resources/core/application.yml:/application.yml
+      - ./resources/core/sentry.properties:/sentry.properties
     external_links:
       - nginx:iparapheur.dom.local
 
@@ -54,7 +55,7 @@ services:
 
 
   crypto:
-    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-crypto:develop
+    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-crypto:latest
     # build: ../ip-crypto
     tty: true
     volumes:
