--- a/resources/nginx/iparapheur.conf
+++ b/resources/nginx/iparapheur.conf
@@ -1,3 +1,18 @@
+# i-Parapheur
+# Copyright (C) 2019 Libriciel-SCOP
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 server {
 
@@ -20,8 +35,8 @@ server {
        proxy_pass http://keycloak:8080/auth;
    }
 
-   location /poc5 {
-       proxy_pass http://core:8080/poc5;
+   location /api {
+       proxy_pass http://core:8080/api;
    }
 
    location /crypto {
