--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -32,15 +32,21 @@ server {
    proxy_http_version 1.1;
 
    location /auth {
-       proxy_pass http://keycloak:8080/auth;
+       # proxy_pass http://keycloak:8080/auth;
+       proxy_pass http://host.docker.internal:9090/auth;
    }
 
    location /api {
-       proxy_pass http://core:8080/api;
+       # proxy_pass http://core:8080/api;
+       proxy_pass http://host.docker.internal:8080/api;
    }
 
    location /crypto {
        proxy_pass http://crypto:8080/crypto;
+   }
+
+   location /flowable-rest {
+       proxy_pass http://flowable-rest:8080/flowable-rest;
    }
 
    location ^~ / {
