--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,12 +1,30 @@
+# i-Parapheur
+# Copyright (C) 2018-2019 Libriciel-SCOP
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU Affero General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-tests.repeat_count = 5
+tests.repeat_count=1
 
-flowable {
-  host = localhost
-  port = 9999
-}
+core.host=iparapheur.dom.local
+core.port=80
+core.login=user
+core.password=password
 
-keycloak {
-  host = localhost
-  port = 9090
-}
+#flowable:
+#  host: localhost
+#  port: 9999
+#
+#keycloak:
+#  host: localhost
+#  port: 9090
