--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -45,8 +45,9 @@ server {
        proxy_pass http://crypto:8080/crypto;
    }
 
-   location /flowable-rest {
-       proxy_pass http://flowable-rest:8080/flowable-rest;
+   location /workflow {
+       # proxy_pass http://workflow:8080/workflow;
+       proxy_pass http://host.docker.internal:10080/workflow;
    }
 
    location ^~ / {
