--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -50,6 +50,11 @@ server {
        proxy_pass http://host.docker.internal:10080/workflow;
    }
 
+   location /pdf-stamp {
+       # proxy_pass http://pdf-stamp:8080/pdf-stamp;
+       proxy_pass http://host.docker.internal:7979/pdf-stamp;
+   }
+
    location ^~ / {
        # proxy_pass http://web:80/;
        proxy_pass http://host.docker.internal:4200/;
