--- a/src/main/resources/nginx/iparapheur.conf
+++ b/src/main/resources/nginx/iparapheur.conf
@@ -32,13 +32,13 @@ server {
    proxy_http_version 1.1;
 
    location /auth {
-       # proxy_pass http://keycloak:8080/auth;
-       proxy_pass http://host.docker.internal:9090/auth;
+       proxy_pass http://keycloak:8080/auth;
+       # proxy_pass http://host.docker.internal:9090/auth;
    }
 
    location /api {
-       # proxy_pass http://core:8080/api;
-       proxy_pass http://host.docker.internal:8080/api;
+       proxy_pass http://core:8080/api;
+       # proxy_pass http://host.docker.internal:8080/api;
    }
 
    location /crypto {
@@ -46,23 +46,23 @@ server {
    }
 
    location /workflow {
-       # proxy_pass http://workflow:8080/workflow;
-       proxy_pass http://host.docker.internal:10080/workflow;
+       proxy_pass http://workflow:8080/workflow;
+       # proxy_pass http://host.docker.internal:10080/workflow;
    }
 
    location /pdf-stamp {
-       # proxy_pass http://pdf-stamp:8080/pdf-stamp;
-       proxy_pass http://host.docker.internal:7979/pdf-stamp;
+       proxy_pass http://pdf-stamp:8080/pdf-stamp;
+       # proxy_pass http://host.docker.internal:8888/pdf-stamp;
    }
 
    location ^~ / {
-       # proxy_pass http://web:80/;
-       proxy_pass http://host.docker.internal:4200/;
+       proxy_pass http://web:80/;
+       # proxy_pass http://host.docker.internal:4200/;
    }
 
    location ^~ /sockjs-node {
-       # proxy_pass http://web:80/sockjs-node;
-       proxy_pass http://host.docker.internal:4200/sockjs-node;
+       proxy_pass http://web:80/sockjs-node;
+       # proxy_pass http://host.docker.internal:4200/sockjs-node;
    }
 
 }
