--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
 
   nginx:
     image: nginx:alpine
+    restart: always
     tty: true
     volumes:
       - ./src/main/resources/nginx/:/etc/nginx/conf.d/
@@ -42,58 +43,63 @@ services:
       - 443:443
 
 
-  #  core:
-  #    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-core:latest
-  #    # build: ../ip-core
-  #    tty: true
-  #    depends_on:
-  #      - postgres
-  #      - alfresco
-  #      - flowable-rest
-  #    volumes:
-  #      - ./src/main/resources/core/application.yml:/application.yml
-  #      - ./src/main/resources/core/sentry.properties:/sentry.properties
-  #    external_links:
-  #      - nginx:iparapheur.dom.local
+  core:
+    image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-core:latest
+    restart: always
+    tty: true
+    depends_on:
+      - postgres
+      - alfresco
+      - workflow
+    volumes:
+      - ./src/main/resources/core/application.yml:/application.yml
+      - ./src/main/resources/core/sentry.properties:/sentry.properties
+    external_links:
+      - nginx:iparapheur.dom.local
 
 
-  #  web:
-  #    image: ip-web:develop
-  #    # build: ../ip-web
-  #    tty: true
+  web:
+    image: ip-web:develop
+    restart: always
+    tty: true
+    #ports:
+    #  - 4200:4200
+    #  - 80:80
 
 
   workflow:
     image: gitlab.libriciel.fr:4567/outils/workflow:latest
+    restart: always
     tty: true
     volumes:
       - ./src/main/resources/workflow/application.yml:/application.yml
       - ./src/main/resources/workflow/sentry.properties:/sentry.properties
-  #    ports:
-  #      - 10080:8080
+    #ports:
+    #  - 10080:8080
 
 
   crypto:
     image: gitlab.libriciel.fr:4567/i-parapheur/components/ip-crypto:latest
-    # build: ../ip-crypto
+    restart: always
     tty: true
     volumes:
       - ./src/main/resources/crypto/application.yml:/application.yml
       - ./src/main/resources/crypto/sentry.properties:/sentry.properties
-    ports:
-      - 8085:8080
+    #ports:
+    #  - 8085:8080
 
 
   pdf-stamp:
     image: gitlab.libriciel.fr:4567/i-parapheur/outils/pdf-stamp:develop
+    restart: always
     tty: true
-    volumes:
-      - ./src/main/resources/pdf-stamp/application.yml:/application.yml
-      # - ./src/main/resources/pdf-stamp/sentry.properties:/sentry.properties
+    #port:
+    #  - 8888:8080
 
 
   alfresco:
     image: alfresco/alfresco-content-repository-community:6.1.1
+    restart: always
     tty: true
     environment:
       JAVA_OPTS: "
@@ -109,12 +115,13 @@ services:
                   "
     volumes:
       - ./data/alfresco:/usr/local/tomcat/alf_data
-    ports:
-      - 9000:8080
+    #ports:
+    #  - 9000:8080
 
 
   postgres:
     build: src/main/resources/postgres
+    restart: always
     tty: true
     environment:
       - POSTGRES_PASSWORD=libriciel2k18
@@ -123,12 +130,13 @@ services:
     command: postgres -c max_connections=500 -c log_min_messages=LOG
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
+    #ports:
+    #  - 5432:5432
 
 
   keycloak:
     image: jboss/keycloak:8.0.2
+    restart: always
     tty: true
     environment:
       - KEYCLOAK_USER=admin
@@ -142,8 +150,8 @@ services:
       - PROXY_ADDRESS_FORWARDING=true
     volumes:
       - ./src/main/resources/keycloak/keycloak.json:/tmp/keycloak.json
-    ports:
-      - 9090:8080
+    #ports:
+    #  - 9090:8080
 
 
   matomo:
@@ -159,9 +167,9 @@ services:
       - MATOMO_DATABASE_USERNAME=matomo
       - MATOMO_DATABASE_PASSWORD=matomo
       - MATOMO_DATABASE_DBNAME=matomo
-    ports:
-      - 9080:80
-      - 9083:443
+    #ports:
+    #  - 9080:80
+    #  - 9083:443
   matomo-db:
     image: mariadb:10.3
     tty: true
