--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ version: '3.7'
 services:
 
   nginx:
-    image: nginx:alpine
+    image: nginx:1.16.1-alpine
     restart: always
     tty: true
     volumes:
