--- a/src/main/resources/nginx/iparapheur.develop.conf
+++ b/src/main/resources/nginx/iparapheur.develop.conf
@@ -51,6 +51,10 @@ server {
     proxy_pass http://host.docker.internal:8888/pdf-stamp;
   }
 
+  location /libersign {
+    proxy_pass http://libersign/;
+  }
+
   location ^~ / {
     proxy_pass http://host.docker.internal:4200/;
   }
